[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grvt-transfer"
version = "0.1.0"
description = "GRVT rebalance, transfer, and emergency unwind bot"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "grvt-pysdk==0.2.1",
  "websockets==13.1",
  "PyYAML>=6.0",
  "eth-account>=0.13.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tzdata>=2024.1",
]

[project.scripts]
grvt-transfer = "grvt_transfer.cli:main"

[tool.setuptools]
packages = ["grvt_transfer", "alerts", "bot", "rebalance", "unwind"]
py-modules = [
  "envutil",
  "flow",
  "repository",
  "rebalance_trading_equity",
  "state",
  "utils",
  "read_positions",
  "test_transfer",
]

